# droidfakecam

./: .gitignore  LICENSE  README.md  build.gradle  build.sh  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/fakecam/controller/: IFakeCamService.aidl
app/src/main/java/com/droidfakecam/controller/: MainActivity.kt
app/src/main/java/com/droidfakecam/vcam/: MainActivity.java
app/src/main/java/com/fakecam/controller/: MainActivity.kt
app/src/main/java/com/fakecam/controller/service/: FakeCamService.kt
app/src/main/java/com/fakecam/controller/ui/: HelpFragment.kt  MediaFragment.kt  SettingsFragment.kt
app/src/main/java/com/fakecam/controller/utils/: FileUtils.kt  MediaValidator.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  fragment_help.xml  fragment_media.xml  fragment_settings.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
magisk_module/: customize.sh  module.prop  post-fs-data.sh  service.sh  system.prop
module/: customize.sh  module.prop  service.sh  system.prop
module/jni/: Android.mk  Application.mk  CMakeLists.txt  camera_hook.cpp  camera_hook.hpp  config.hpp  frame_utils.cpp  frame_utils.hpp  media_reader.cpp  media_reader.hpp  zygisk.hpp  zygisk_main.cpp
